--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: 3.12
 
       - name: Install poetry
-        uses: abatilo/actions-poetry@latest
+        uses: abatilo/actions-poetry@v3
         with:
           poetry-version: latest
 
