--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,34 +1,48 @@
-site_name: EmbedIDS, Modern Intrusion Detection System (IDS) for Embedded Systems
+site_name: EmbedIDS, Cybersecurity for Embedded Systems 
 site_author: Seyed Amir Alavi
-site_url: https://embedids.samiralavi.io/
-repo_name: samiralavi/embedids
+site_url: https://embedids.samiralavi.io/ 
+repo_url: https://github.com/samiralavi/embedids
 docs_dir: "docs"
 theme:
   name: material
+  custom_dir: docs/overrides
   language: en
-  icon:
-    logo: material/contacts
+  logo: images/embedIDS_logo.png
   favicon: images/favicon.png
+  icon:
+    repo: fontawesome/brands/github
   palette:
+      # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+    # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
       toggle:
         icon: material/weather-sunny
         name: Switch to dark mode
-      primary: teal
-      accent: blue
+      primary: white
+      accent: red
+    # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       toggle:
         icon: material/weather-night
         name: Switch to light mode
-      primary: teal
+      primary: red
       accent: red
 
   features:
     - navigation.sections
-    - toc.integrate
+    - navigation.tabs
+    - navigation.sections
     - navigation.top
+    - navigation.footer
+    - header.autohide
+    - toc.integrate
+    - toc.follow
     - search.suggest
     - search.highlight
     - search.share
@@ -37,6 +51,35 @@ theme:
 extra:
   version:
     provider: mike
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/samiralavi/embedids
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/company/embedids
+  analytics:
+    provider: google
+    property: G-5ZPJDQ0248
+    feedback:
+      title: Was this page helpful?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: This page was helpful
+          data: 1
+          note: >-
+            Thanks for your feedback!
+        - icon: material/emoticon-sad-outline
+          name: This page could be improved
+          data: 0
+          note: >- 
+            Thanks for your feedback! Help us improve this page by
+            using our <a href="..." target="_blank" rel="noopener">feedback form</a>.
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
 
 markdown_extensions:
   - admonition
@@ -57,8 +100,32 @@ markdown_extensions:
 plugins:
   - search
   - mike
-
+  - social
+  - blog:
+      blog_dir: blog
+      archive: false
+  - rss:
+      match_path: blog/posts/.* 
+      date_from_meta:
+        as_creation: date
+      categories:
+        - categories
+        - tags
+  - git-revision-date-localized:
+      enable_creation_date: true
+  - git-committers:
+      repository: samiralavi/embedids
+      branch: main
 nav:
   - "index.md"
+  - Blog:
+    - blog/index.md
 
-copyright: Copyright &copy; 2025 Seyed Amir Alavi.
+extra_css:
+  - stylesheets/extra.css
+
+extra_javascript:
+  - javascripts/extra.js
+
+copyright: Copyright &copy; 2025 Seyed Amir Alavi and Mahyar Abbaspour –
+  <a href="#__consent">Change cookie settings</a>
