--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ authors = [
 ]
 license = "Apache-2.0"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4"
 dependencies = [
-    "mkdocs-material (>=9.6.15,<10.0.0)",
-    "mike (>=2.1.3,<3.0.0)"
+    "mkdocs-material[imaging] (>=9.6.15,<10.0.0)",
+    "mike (>=2.1.3,<3.0.0)",
+    "mkdocs-rss-plugin (>=1.17.3,<2.0.0)",
+    "mkdocs-git-revision-date-localized-plugin (>=1.4.7,<2.0.0)",
+    "mkdocs-git-committers-plugin-2 (>=2.5.0,<3.0.0)"
 ]
 
 [tool.poetry]
