fix semantic PR title github action
Signed-off-by: Amir Alavi <seydamir@gmail.com>

--- a/.github/workflows/semantic_pr_title.yaml
+++ b/.github/workflows/semantic_pr_title.yaml
@@ -11,7 +11,7 @@ jobs:
       pull-requests: read
     steps:
       - name: Check PR title uses conventional commit spec
-        uses: amannn/action-semantic-pull-request@latest
+        uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
