--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,16 +100,6 @@ plugins:
   - search
   - mike
   - social
-  - blog:
-      blog_dir: blog
-      archive: false
-  - rss:
-      match_path: blog/posts/.* 
-      date_from_meta:
-        as_creation: date
-      categories:
-        - categories
-        - tags
   - git-revision-date-localized:
       enable_creation_date: true
   - git-committers:
@@ -119,8 +109,7 @@ nav:
   - "index.md"
   - "quickstart.md"
   - "tutorial.md"
-  - Blog:
-    - blog/index.md
+  - Blog: "https://blog.embedids.samiralavi.com"
 
 extra_css:
   - assets/stylesheets/extra.css
