add logo for dark theme
Signed-off-by: Amir Alavi <seydamir@gmail.com>

--- a/.github/workflows/semantic_pr_title.yaml
+++ b/.github/workflows/semantic_pr_title.yaml
@@ -2,7 +2,7 @@ name: Check Pull Request Title
 
 on:
   pull_request:
-    branches: [main, feat/*]
+    branches: [main, feat/*, fix/*]
 
 jobs:
   semantic_pull_request:
