--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ authors = [
 ]
 license = "Apache-2.0"
 readme = "README.md"
-requires-python = ">=3.12,<4"
+requires-python = ">=3.10,<4"
 dependencies = [
     "mkdocs-material[imaging] (>=9.6.15,<10.0.0)",
     "mike (>=2.1.3,<3.0.0)",
     "mkdocs-rss-plugin (>=1.17.3,<2.0.0)",
     "mkdocs-git-revision-date-localized-plugin (>=1.4.7,<2.0.0)",
-    "mkdocs-git-committers-plugin-2 (>=2.5.0,<3.0.0)"
+    "mkdocs-git-committers-plugin-2 (>=2.5.0,<3.0.0)",
+    "mkdocs-glightbox (>=0.5.1,<0.6.0)"
 ]
 
 [tool.poetry]
